--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -25,6 +25,11 @@
         android:layout_gravity="center"
         android:id="@+id/date_list"
         android:gravity="center"/>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/date_amount"
+        android:gravity="center"/>
 
 </LinearLayout>
