--- a/app/src/main/res/layout/wallet_details.xml
+++ b/app/src/main/res/layout/wallet_details.xml
@@ -25,25 +25,28 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="2dp"
-        card_view:cardBackgroundColor="@color/white"
+        card_view:cardBackgroundColor="#ffffff"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="4dp"
         card_view:cardUseCompatPadding="true"
         xmlns:tools="http://schemas.android.com/tools">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner"
             android:text="Today"
-            android:layout_marginTop="-16dp"/>
+            android:textSize="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="-12dp"/>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:gravity="center"
-            android:id="@+id/today"/>
+            android:textSize="30dp"
+            tools:text="Amount"
+            android:id="@+id/today"
+            android:layout_gravity="center"/>
 
 </android.support.v7.widget.CardView>
 
@@ -54,26 +57,29 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="2dp"
-        card_view:cardBackgroundColor="#fff"
+        card_view:cardBackgroundColor="#ffffff"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="4dp"
         card_view:cardUseCompatPadding="true"
         xmlns:tools="http://schemas.android.com/tools">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner"
-            android:text="Monthly"
-            android:layout_marginTop="-16dp"/>
+            android:text="This Month"
+            android:textSize="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="-12dp"/>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:background="@color/white"
-            android:id="@+id/monthly"/>
+            android:textSize="30dp"
+            tools:text="Amount"
+            android:id="@+id/month"
+            android:layout_gravity="center"/>
+
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
